# somenergia-jardiner

./: .dockerignore  .editorconfig  .env.example  .flake8  .git-changelog.toml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc.yaml  .rsyncignore  .sqlfluff  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.main.yml  docker-compose.mkdocs.yml  example.env  index.html  mkdocs.yml  poetry-mkdocs-requirements.txt  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
.gitlab-ci/: .pre-commit.yml
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: airflow.md  dbt.md  default.md
Sources/drive_airbyte/: index.html
adr/2022-10-11-dbt_workflow_meter_alarms/: index.html
adr/2022-10-14-meter_alarm_logic/: index.html
adr/2022-10-14-spines/: index.html
adr/2022-10-26-real-time_alarms/: index.html
adr/2023-06-13-obt_plantes/: index.html
adr/2023-06-13-pipeline_dades_llargues/: index.html
adr/2023-09-12-redash_vs_superset/: index.html
adr/template/: index.html
alerts/: Alert_inverter_zero_power_at_daylight_novu_template.html  Alert_meter_no_readings.html  Alert_meter_zero_energy.html  novu_templates.html
containers/airflow-local/: Dockerfile  docker-compose.airflow-local.yml  example.airflow-local.env  example.env.airflow  requirements.txt
containers/app/: Dockerfile  docker-compose.yml
containers/compose/: docker-compose.app.yml
containers/dockerfiles/: app.Dockerfile
containers/elementary_s3www/: docker-compose.yml
containers/mkdocs/: Dockerfile  README.md  docker-compose.mkdocs.yml  example.mkdocs.env
dags/: dag_jardiner_dbt_snapshot.py  dag_simel_mhcil_nas_mirror_from_minio.py  dbt_test_quality_dset.py  dset_materialize_dag.py  generate_gitlab_ci_pages.py  jardineria_dag.py  plant_alerts.py  plant_production_dataset_dag.py  plant_production_datasets_dag.py  plant_production_datasets_jardiner_dag.py  plantmonitor_alert_inverter_interinverter_relative_temperature.py  plantmonitor_alert_inverter_temperature.py  plantmonitor_alert_inverter_zero_power.py  plantmonitor_alert_meter_no_readings.py  plantmonitor_alert_meter_zero_energy.py  plantmonitor_porduction_mothly_dataset_dag.py
dbt_jardiner/: .gitignore  dbt_project.yml  package-lock.yml  packages.yml
dbt_jardiner/analyses/: dset_gaps_preview_20240110.sql  plants_description.sql
dbt_jardiner/config/: profiles.yml
dbt_jardiner/macros/: concat_bytes.sql  create_alert_inverter_zero_power_at_daylight_status.sql  create_alerts_status_table.sql  pivot_wider.sql
dbt_jardiner/models/: overview.md
dbt_jardiner/seeds/: _jardiner__seeds.yaml  alert_inverterregistry_clean_last_hour_temperature_sample.csv  alertdf__onealert.csv  meter_registry_raw_1day_testing.csv  schema.yaml
dbt_jardiner/snapshots/: _jardiner__snapshots.yaml  _jardiner__snapshots_sources.yaml  snapshot_plant_parameters.sql  snapshot_production_target.sql  snapshot_signal_denormalized.sql
dbt_jardiner/tests/: test_device_uuid_repeated.sql  test_device_uuid_repeted.sql  test_dset_active_power__missing_phase_last_day.sql  test_dset_gaps_per_month_and_signal_all_time.sql  test_dset_gaps_per_month_and_signal_last_hour.sql  test_dset_incoming_uuids_have_references_in_signal_denormalized.sql  test_dset_raw_uuids_not_empty_or_null_3_days.sql  test_dset_signals_receiver.sql  test_dset_signals_receiver_all_time.sql  test_dset_signals_receiver_last_hour.sql  test_gapfil_5min_nrows.sql  test_gapfill_5min_nrows.sql  test_repeated_device_uuid_errors.sql  test_signal_is_correctly_converted_to_numeric.sql  test_solargis_temperature_registry.sql  test_to_debug_device_uuid_errors copy.sql  test_to_debug_device_uuid_errors.sql
deploy/elementary_s3www/: stack.elementary_s3www.yml
deprecated/TODOs/: index.html
desenvolupadors/2023-02-08-novu_notifications/: index.html
desenvolupadors/2023-06-05-download_solargis_manually/: index.html
desenvolupadors/2023-06-10-overview-devs/: index.html
desenvolupadors/2023-07-10-dbt_cmds_utils/: index.html
desenvolupadors/2023-07-13-codi_reciclable/: index.html
desenvolupadors/2023-08-28-afegir-planta-a-superset/: index.html
docs/: 2023-06-03-macrofase roadmap.md  2023-06-03-motivacio.md  TODOs.md  alta_planta.md  codi_reciclable.md  dbt_cmds_utils.md  index.md  novu_notifications.md
jardiner/: __init__.py  jardiner_utils.py  jardineria.py  notification.py  notify_alarms.py  settings.py
scripts/: notify_alarms.py  notify_alert.py  novu_interface.py
search/: search_index.json
superset/: produccio_davui.yml
testdata/: alert_inverter_zero_power_at_daylight.csv  alert_inverter_zero_power_at_daylight_status.csv  plant_topic_association.csv  plant_topic_association_one_empty.csv
tests/: test_jardineria.py  test_notify_alarms.py  test_notify_alert.py
(+424 files in other folders)
