[tool.poetry]
authors = ["Dades <equip.dades@somenergia.coop>"]
description = ""
name = "jardiner"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
dbt-postgres = "^1.2.2"
pandas = "^1.5.0"
pendulum = "^2.1.2"
python = ">=3.8,<3.11"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
sqlalchemy = "^1.4.41,!=1.4.50,!=1.4.51"
typer = "^0.6.1"
pydantic = {version = "<2", extras = ["dotenv"]}
loguru = "^0.7.0"
elementary-data = "^0.13.2"

[tool.poetry.group.dev.dependencies]
dbt-osmosis = "^0.11.22"
deptry = "^0.6.3"
ipdb = "^0.13.9"
ipykernel = "^6.21.3"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.9"
pymdown-extensions = "^10.7"
pytest = "^7.1.3"
git-changelog = "^2.1.0"
pre-commit = "^3.3.3"
sqlfluff = "^2.3.5"
sqlfluff-templater-dbt = "^2.3.5"
black = "^24.1.1"

[tool.poetry.group.mkdocs.dependencies]

mkdocs = "^1.5.3"
mkdocs-material = "^9.5.9"
mkdocs-material-extensions = "^1.1.1"
pymdown-extensions = "^10.7"

[tool.poetry.group.dbt-docs.dependencies]
dbt-osmosis = "^0.11.22"
dbt-postgres = "^1.2.2"
elementary-data = "^0.13.2"


[tool.poetry.group.airflow.dependencies]
apache-airflow = "^2.7.3"
apache-airflow-providers-docker = "^3.8.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

# ignore until dbt-utils fixes pytest conf must be in root
[tool.pytest.ini_options]
addopts = "--ignore=dbt_jardiner/dbt_packages"

[tool.deptry]
exclude = [
  'tests',
  'docs',
]

[[tool.poetry_bumpversion.replacements]]
files = ["jardiner/__init__.py"]
replace = '__version__ = "{new_version}"'
search = '__version__ = "{current_version}"'
